@@ -1,3 +1,7 @@
+2003-09-29  Christian Neumair  <chris@gnome-de.org>
+
+	* providers/sybase/utils.c: Fixed string (#110449).
+
 2003-09-19  Chris Silles <cas@starfire-programming.net>
 
 	* configure.in: fixed msql switch check
